added faculty ranks

--- a/Student-Portal/Student-Portal.csproj
+++ b/Student-Portal/Student-Portal.csproj
@@ -207,10 +207,23 @@
     <Compile Include="Migrations\202007022348505_update_rank.Designer.cs">
       <DependentUpon>202007022348505_update_rank.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202007031236368_add faculty rank.cs" />
+    <Compile Include="Migrations\202007031236368_add faculty rank.Designer.cs">
+      <DependentUpon>202007031236368_add faculty rank.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202007031621168_add faculty rank foreign key.cs" />
+    <Compile Include="Migrations\202007031621168_add faculty rank foreign key.Designer.cs">
+      <DependentUpon>202007031621168_add faculty rank foreign key.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202007031719201_removed required from username.cs" />
+    <Compile Include="Migrations\202007031719201_removed required from username.Designer.cs">
+      <DependentUpon>202007031719201_removed required from username.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Custom Attribute\AccessDeniedAuthorizeAttribute.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Course.cs" />
+    <Compile Include="Models\FacultyAndRank.cs" />
     <Compile Include="Models\FacultyRank.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -335,6 +348,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202007022348505_update_rank.resx">
       <DependentUpon>202007022348505_update_rank.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202007031236368_add faculty rank.resx">
+      <DependentUpon>202007031236368_add faculty rank.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202007031621168_add faculty rank foreign key.resx">
+      <DependentUpon>202007031621168_add faculty rank foreign key.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202007031719201_removed required from username.resx">
+      <DependentUpon>202007031719201_removed required from username.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
