added necessary age assets

--- a/Student-Portal/Student-Portal.csproj
+++ b/Student-Portal/Student-Portal.csproj
@@ -245,23 +245,94 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\css\bootstrap.min.css" />
+    <Content Include="Content\css\default-css.css" />
+    <Content Include="Content\css\font-awesome.min.css" />
+    <Content Include="Content\css\metisMenu.css" />
+    <Content Include="Content\css\owl.carousel.min.css" />
+    <Content Include="Content\css\responsive.css" />
+    <Content Include="Content\css\slicknav.min.css" />
+    <Content Include="Content\css\styles.css" />
+    <Content Include="Content\css\themify-icons.css" />
+    <Content Include="Content\css\typography.css" />
+    <Content Include="Content\images\author\author-img1.jpg" />
+    <Content Include="Content\images\author\author-img2.jpg" />
+    <Content Include="Content\images\author\author-img3.jpg" />
+    <Content Include="Content\images\author\author-img4.jpg" />
+    <Content Include="Content\images\author\avatar.png" />
+    <Content Include="Content\images\bg\singin-bg.jpg" />
+    <Content Include="Content\images\blog\post-thumb1.jpg" />
+    <Content Include="Content\images\blog\post-thumb2.jpg" />
+    <Content Include="Content\images\card\card-img1.jpg" />
+    <Content Include="Content\images\card\card-img10.jpg" />
+    <Content Include="Content\images\card\card-img2.jpg" />
+    <Content Include="Content\images\card\card-img3.jpg" />
+    <Content Include="Content\images\card\card-img4.jpg" />
+    <Content Include="Content\images\card\card-img5.jpg" />
+    <Content Include="Content\images\card\card-img6.jpg" />
+    <Content Include="Content\images\card\card-img7.jpg" />
+    <Content Include="Content\images\card\card-img8.jpg" />
+    <Content Include="Content\images\card\card-img9.jpg" />
+    <Content Include="Content\images\icon\loader.gif" />
+    <Content Include="Content\images\icon\logo.png" />
+    <Content Include="Content\images\icon\logo2.png" />
+    <Content Include="Content\images\icon\market-value\icon1.png" />
+    <Content Include="Content\images\icon\market-value\icon2.png" />
+    <Content Include="Content\images\icon\market-value\icon3.png" />
+    <Content Include="Content\images\icon\market-value\icon4.png" />
+    <Content Include="Content\images\icon\market-value\trends-down-icon.png" />
+    <Content Include="Content\images\icon\market-value\trends-up-icon.png" />
+    <Content Include="Content\images\icon\market-value\triangle-down.png" />
+    <Content Include="Content\images\icon\market-value\triangle-up.png" />
+    <Content Include="Content\images\media\media1.jpg" />
+    <Content Include="Content\images\media\media2.jpg" />
+    <Content Include="Content\images\team\team-author1.jpg" />
+    <Content Include="Content\images\team\team-author2.jpg" />
+    <Content Include="Content\images\team\team-author3.jpg" />
+    <Content Include="Content\images\team\team-author4.jpg" />
+    <Content Include="Content\images\team\team-author5.jpg" />
     <Content Include="favicon.ico" />
+    <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="fonts\themify.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\bar-chart.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="fonts\fontawesome-webfont.eot" />
+    <Content Include="fonts\fontawesome-webfont.ttf" />
+    <Content Include="fonts\fontawesome-webfont.woff" />
+    <Content Include="fonts\fontawesome-webfont.woff2" />
+    <Content Include="fonts\FontAwesome.otf" />
+    <Content Include="fonts\themify.eot" />
+    <Content Include="fonts\themify.ttf" />
+    <Content Include="fonts\themify.woff" />
+    <Content Include="Content\images\icon\market-value\Thumbs.db" />
+    <Content Include="Content\images\icon\Thumbs.db" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.slicknav.min.js" />
+    <Content Include="Scripts\jquery.slimscroll.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\line-chart.js" />
+    <Content Include="Scripts\maps.js" />
+    <Content Include="Scripts\metisMenu.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\owl.carousel.min.js" />
+    <Content Include="Scripts\pie-chart.js" />
+    <Content Include="Scripts\plugins.js" />
+    <Content Include="Scripts\popper.min.js" />
+    <Content Include="Scripts\scripts.js" />
+    <Content Include="Scripts\vendor\jquery-2.2.4.min.js" />
+    <Content Include="Scripts\vendor\modernizr-2.8.3.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -320,6 +391,7 @@
     <Content Include="Views\FacultyRank\Details.cshtml" />
     <Content Include="Views\FacultyRank\Edit.cshtml" />
     <Content Include="Views\FacultyRank\Index.cshtml" />
+    <Content Include="Views\Shared\_CustomLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
