updated project file

--- a/Student-Portal/Student-Portal.csproj
+++ b/Student-Portal/Student-Portal.csproj
@@ -239,6 +239,81 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content2\contactform\contactform.js" />
+    <Content Include="Content2\contactform\Readme.txt" />
+    <Content Include="Content2\css\scss-files.txt" />
+    <Content Include="Content2\css\style.css" />
+    <Content Include="Content2\img\about-1.jpg" />
+    <Content Include="Content2\img\about-2.jpg" />
+    <Content Include="Content2\img\agent-1.jpg" />
+    <Content Include="Content2\img\agent-2.jpg" />
+    <Content Include="Content2\img\agent-3.jpg" />
+    <Content Include="Content2\img\agent-4.jpg" />
+    <Content Include="Content2\img\agent-5.jpg" />
+    <Content Include="Content2\img\agent-6.jpg" />
+    <Content Include="Content2\img\agent-7.jpg" />
+    <Content Include="Content2\img\apple-touch-icon.png" />
+    <Content Include="Content2\img\author-1.jpg" />
+    <Content Include="Content2\img\author-2.jpg" />
+    <Content Include="Content2\img\favicon.png" />
+    <Content Include="Content2\img\mini-testimonial-1.jpg" />
+    <Content Include="Content2\img\mini-testimonial-2.jpg" />
+    <Content Include="Content2\img\plan2.jpg" />
+    <Content Include="Content2\img\post-1.jpg" />
+    <Content Include="Content2\img\post-2.jpg" />
+    <Content Include="Content2\img\post-3.jpg" />
+    <Content Include="Content2\img\post-4.jpg" />
+    <Content Include="Content2\img\post-5.jpg" />
+    <Content Include="Content2\img\post-6.jpg" />
+    <Content Include="Content2\img\post-7.jpg" />
+    <Content Include="Content2\img\post-single-1.jpg" />
+    <Content Include="Content2\img\post-single-2.jpg" />
+    <Content Include="Content2\img\property-1.jpg" />
+    <Content Include="Content2\img\property-10.jpg" />
+    <Content Include="Content2\img\property-2.jpg" />
+    <Content Include="Content2\img\property-3.jpg" />
+    <Content Include="Content2\img\property-4.jpg" />
+    <Content Include="Content2\img\property-5.jpg" />
+    <Content Include="Content2\img\property-6.jpg" />
+    <Content Include="Content2\img\property-7.jpg" />
+    <Content Include="Content2\img\property-8.jpg" />
+    <Content Include="Content2\img\property-9.jpg" />
+    <Content Include="Content2\img\slide-1.jpg" />
+    <Content Include="Content2\img\slide-2.jpg" />
+    <Content Include="Content2\img\slide-3.jpg" />
+    <Content Include="Content2\img\slide-about-1.jpg" />
+    <Content Include="Content2\img\testimonial-1.jpg" />
+    <Content Include="Content2\img\testimonial-2.jpg" />
+    <Content Include="Content2\js\main.js" />
+    <Content Include="Content2\lib\animate\animate.css" />
+    <Content Include="Content2\lib\animate\animate.min.css" />
+    <Content Include="Content2\lib\bootstrap\css\bootstrap.css" />
+    <Content Include="Content2\lib\bootstrap\css\bootstrap.min.css" />
+    <Content Include="Content2\lib\bootstrap\js\bootstrap.js" />
+    <Content Include="Content2\lib\bootstrap\js\bootstrap.min.js" />
+    <Content Include="Content2\lib\easing\easing.js" />
+    <Content Include="Content2\lib\easing\easing.min.js" />
+    <Content Include="Content2\lib\font-awesome\css\font-awesome.css" />
+    <Content Include="Content2\lib\font-awesome\css\font-awesome.min.css" />
+    <Content Include="Content2\lib\font-awesome\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content2\lib\ionicons\css\ionicons.css" />
+    <Content Include="Content2\lib\ionicons\css\ionicons.min.css" />
+    <Content Include="Content2\lib\ionicons\fonts\ionicons.svg" />
+    <Content Include="Content2\lib\jquery\jquery-migrate.min.js" />
+    <Content Include="Content2\lib\jquery\jquery.min.js" />
+    <Content Include="Content2\lib\owlcarousel\assets\ajax-loader.gif" />
+    <Content Include="Content2\lib\owlcarousel\assets\owl.carousel.css" />
+    <Content Include="Content2\lib\owlcarousel\assets\owl.carousel.min.css" />
+    <Content Include="Content2\lib\owlcarousel\assets\owl.theme.default.css" />
+    <Content Include="Content2\lib\owlcarousel\assets\owl.theme.default.min.css" />
+    <Content Include="Content2\lib\owlcarousel\assets\owl.theme.green.css" />
+    <Content Include="Content2\lib\owlcarousel\assets\owl.theme.green.min.css" />
+    <Content Include="Content2\lib\owlcarousel\assets\owl.video.play.png" />
+    <Content Include="Content2\lib\owlcarousel\owl.carousel.js" />
+    <Content Include="Content2\lib\owlcarousel\owl.carousel.min.js" />
+    <Content Include="Content2\lib\popper\popper.min.js" />
+    <Content Include="Content2\lib\scrollreveal\scrollreveal.js" />
+    <Content Include="Content2\lib\scrollreveal\scrollreveal.min.js" />
     <Content Include="Content\bootstrap-flatly.css" />
     <Content Include="Content\bootstrap-spacelab.css" />
     <Content Include="Content\bootstrap-theme.css" />
@@ -255,6 +330,8 @@
     <Content Include="Content\css\styles.css" />
     <Content Include="Content\css\themify-icons.css" />
     <Content Include="Content\css\typography.css" />
+    <Content Include="Content\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\fonts\themify.svg" />
     <Content Include="Content\images\author\author-img1.jpg" />
     <Content Include="Content\images\author\author-img2.jpg" />
     <Content Include="Content\images\author\author-img3.jpg" />
@@ -292,24 +369,35 @@
     <Content Include="Content\images\team\team-author4.jpg" />
     <Content Include="Content\images\team\team-author5.jpg" />
     <Content Include="favicon.ico" />
-    <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="fonts\themify.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bar-chart.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="fonts\fontawesome-webfont.eot" />
-    <Content Include="fonts\fontawesome-webfont.ttf" />
-    <Content Include="fonts\fontawesome-webfont.woff" />
-    <Content Include="fonts\fontawesome-webfont.woff2" />
-    <Content Include="fonts\FontAwesome.otf" />
-    <Content Include="fonts\themify.eot" />
-    <Content Include="fonts\themify.ttf" />
-    <Content Include="fonts\themify.woff" />
     <Content Include="Content\images\icon\market-value\Thumbs.db" />
     <Content Include="Content\images\icon\Thumbs.db" />
+    <Content Include="Content\fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Content\fonts\fontawesome-webfont.woff" />
+    <Content Include="Content\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Content\fonts\FontAwesome.otf" />
+    <Content Include="Content\fonts\themify.eot" />
+    <Content Include="Content\fonts\themify.ttf" />
+    <Content Include="Content\fonts\themify.woff" />
+    <Content Include="Content2\lib\bootstrap\css\bootstrap.min.css.map" />
+    <Content Include="Content2\lib\bootstrap\js\bootstrap.min.js.map" />
+    <Content Include="Content2\lib\font-awesome\fonts\fontawesome-webfont.eot" />
+    <Content Include="Content2\lib\font-awesome\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Content2\lib\font-awesome\fonts\fontawesome-webfont.woff" />
+    <Content Include="Content2\lib\font-awesome\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Content2\lib\font-awesome\fonts\FontAwesome.otf" />
+    <Content Include="Content2\lib\ionicons\fonts\ionicons.eot" />
+    <Content Include="Content2\lib\ionicons\fonts\ionicons.ttf" />
+    <Content Include="Content2\lib\ionicons\fonts\ionicons.woff" />
+    <Content Include="Content2\lib\ionicons\fonts\ionicons.woff2" />
+    <Content Include="Content2\lib\owlcarousel\LICENSE" />
+    <Content Include="Content2\lib\popper\popper.min.js.map.json" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -392,6 +480,7 @@
     <Content Include="Views\FacultyRank\Edit.cshtml" />
     <Content Include="Views\FacultyRank\Index.cshtml" />
     <Content Include="Views\Shared\_CustomLayout.cshtml" />
+    <Content Include="Views\Shared\_CustomLayout2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
