--- a/Student-Portal/Student-Portal.csproj
+++ b/Student-Portal/Student-Portal.csproj
@@ -223,6 +223,14 @@
     <Compile Include="Migrations\202007072343330_removed mothername and fathername for faclty.Designer.cs">
       <DependentUpon>202007072343330_removed mothername and fathername for faclty.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202008051130115_update application user.cs" />
+    <Compile Include="Migrations\202008051130115_update application user.Designer.cs">
+      <DependentUpon>202008051130115_update application user.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202008091846392_require city.cs" />
+    <Compile Include="Migrations\202008091846392_require city.Designer.cs">
+      <DependentUpon>202008091846392_require city.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Custom Attribute\AccessDeniedAuthorizeAttribute.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -526,6 +534,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202007072343330_removed mothername and fathername for faclty.resx">
       <DependentUpon>202007072343330_removed mothername and fathername for faclty.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008051130115_update application user.resx">
+      <DependentUpon>202008051130115_update application user.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008091846392_require city.resx">
+      <DependentUpon>202008091846392_require city.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
