--- a/Student-Portal/Student-Portal.csproj
+++ b/Student-Portal/Student-Portal.csproj
@@ -262,6 +262,10 @@
     <Compile Include="Migrations\202008140635036_added currency data type for net salary.Designer.cs">
       <DependentUpon>202008140635036_added currency data type for net salary.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202009031640282_Add approval status.cs" />
+    <Compile Include="Migrations\202009031640282_Add approval status.Designer.cs">
+      <DependentUpon>202009031640282_Add approval status.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Custom Attribute\AccessDeniedAuthorizeAttribute.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -274,7 +278,7 @@
     <Compile Include="Models\RoleViewModel.cs" />
     <Compile Include="Models\Salary.cs" />
     <Compile Include="Models\SalaryStructure.cs" />
-    <Compile Include="Models\ViewModel.cs" />
+    <Compile Include="Models\CoursesViewModel.cs" />
     <Compile Include="Models\ViewUserGrid.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -613,6 +617,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202008140635036_added currency data type for net salary.resx">
       <DependentUpon>202008140635036_added currency data type for net salary.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202009031640282_Add approval status.resx">
+      <DependentUpon>202009031640282_Add approval status.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
